Update id-repository-identity-service-developer-guide.md